test_data/Xml/Unexpected/Unserializable/InvalidClassName/file/wrong.xml.exception
Expected an element representing an instance of class File with element name file, but got: utterlyInvalid at: the beginning